# tennislive

./: .gitignore  README.md  design-qa.md  pyproject.toml
data/: content_state.json  editorial_memory.json  editorial_notes.json  flash_state.json  media_briefs.json  official_schedule_sources.json  player_name_overrides.json  player_name_review_queue.json  quiz_state.json  story_state.json  story_wishlist.json  venue_assets.json  video_rights.example.json  weekly-report.md
docs/: content-calendar.md  player-name-audit-2026-07-20.md  video-localization.md  xiaohongshu-playbook.md  yesterday-point.md
tests/: conftest.py  test_ai_editorial.py  test_authority.py  test_cli.py  test_content_ops.py  test_cover_render_binding.py  test_cover_visual_quality.py  test_daily_point.py  test_espn.py  test_flashcard.py  test_hashtags.py  test_history_dedupe.py  test_media_research.py  test_models.py  test_narrative.py  test_news_flash.py  test_official_schedule.py  test_official_stats.py  test_official_video.py  test_platform_title_limits.py  test_player_names.py  test_pushplus.py  test_qa_xiaohongshu.py  test_rating.py  test_render.py  test_source_aggregation.py  test_sportradar.py  test_timeutil.py  test_trends.py  test_venue_assets.py  test_video_digest.py  test_video_pipeline.py  test_visual_sources.py  test_zh.py
tools/: build_fonts.py  fetch_flags.py  fetch_venues.py  probe_2019wimbledon.py  probe_2019wimbledon_verify.py  probe_ao2012_both.py  probe_ao2012_photo.py  probe_ao2012_photo2.py  probe_ao2012_verify.py  probe_ao2012_visual.py  probe_ao2012_wiki_images.py  probe_ap_photo.py  probe_atp_official.py  probe_ausopen_crop.py  probe_ausopen_gallery.py  probe_big_three_photos.py  probe_big_three_photos2.py  probe_big_three_sizes.py  probe_big_three_verify.py  probe_bigthree_wiki_images.py  probe_cincinnati_photos.py  probe_citations.py  probe_commons_metadata.py  probe_cover_refetch.py  probe_cover_swap.py  probe_cover_verify1.py  probe_cover_verify2.py  probe_cover_verify3.py  probe_cover_verify4.py  probe_cover_verify5.py  probe_download_images.py  (+39 more)
(+387 files in other folders)
