[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tennislive"
version = "0.1.0"
description = "WTA/ATP 巡回赛每日赛程赛果同步：CLI 查询 + 公众号/小红书内容自动生成"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "rich>=13.0",
    "Pillow>=10.0",
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# HTML/Chromium 精细卡片渲染（缺失时自动回退 Pillow 版）
webrender = ["playwright>=1.40"]

[project.scripts]
tennislive = "tennislive.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
